Mise en place BEM

--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
         <meta name="description" content="Site de commande de repas en ligne">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="css/style.css">
+        <!-- Google Font -->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <!-- Shrikhand Font -->
+        <link href="https : //fonts.googleapis.com/css2?family= Raleway & display = swap" rel="stylesheet">
+        <!-- Roboto Font -->
+        <link href="https://fonts.googleapis.com/css2?family=Raleway&family=Roboto&display=swap" rel="stylesheet">
         <!-- Open Graph data --> 
         <meta property="og:title" content="OhMyFood | Commande de repas en ligne"/>
         <meta property="og:type" content="website"/>
@@ -38,7 +45,7 @@
                 <h2 class="bloc__header--p">Découvrez des restaurants d'exception, séléctionnés par nos soins.</h2>
                 <button class="bloc__header--btn" type="button" name="button">Explorer nos restaurants</button>
             </div>
-            <!-- TODO: INDEX-SECTION__EXPLICATION -->
+            <!--  -->
             <div class="bloc__fonct">
                 <h3 class="bloc__fonct--title">Fonctionnement</h3>
                 <ol>
@@ -48,11 +55,11 @@
                 </ol>
             </div>
         </div>
-        <!-- TODO: INDEX-SECTION__CARD -->
+        <!--  -->
         <section>
             <div class="bloc__card">
             <h3 class="bloc__card--title">Restaurants</h3>
-            <!-- TODO: card_palette -->
+            <!-- Card "La palette du goût" -->
                 <a class="bloc__card--card" href="./palette.html">
                     <figure class="bloc__card--figure">
                         <div class="bloc__card--new">Nouveau</div>
@@ -66,7 +73,7 @@
                         </figcaption>
                     </figure>
                 </a>
-                <!-- TODO: card_enchantée -->
+                <!-- Card "La note enchantée"-->
                 <a class="bloc__card--card" href="./enchantée.html">
                     <figure class="bloc__card--figure">
                         <div class="bloc__card--new">Nouveau</div>
@@ -80,7 +87,7 @@
                         </figcaption>
                     </figure>
                 </a>
-                <!-- TODO: card_française -->
+                <!-- Card "À la française" -->
                 <a class="bloc__card--card" href="./francaise.html">
                     <figure class="bloc__card--figure">
                         <img class="bloc__card--img" src="./public/images/restaurants/img3.jpg" alt="À la française"/>
@@ -93,7 +100,7 @@
                         </figcaption>
                     </figure>
                 </a>
-                <!-- TODO: card_délice -->
+                <!-- Card "Le délice des sens" -->
                 <a class="bloc__card--card" href="./délice.html">
                     <figure class="bloc__card--figure">
                         <img class="bloc__card--img" src="./public/images/restaurants/img4.jpg" alt="Le délice des sens"/>
@@ -108,8 +115,7 @@
                 </a>
             </div>
         </section>
-
-        <!-- TODO: footer -->
+        <!-- Footer -->
         <footer>
             <div class="bloc__footer">
                 <span class="bloc__footer--span">ohmyfood</span>
