Restaurant page creation

--- a/delice_des_sens.html
+++ b/delice_des_sens.html
@@ -1,1 +1,238 @@
 <!DOCTYPE html>
+<html lang="fr">
+    <head>
+        <title>OhMyFood | Le délice des sens</title>
+        <meta charset="utf-8">
+        <meta name="author" content="Pierre KÖLSCH">
+        <meta name="description" content="Site de commande de repas en ligne">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        
+            <!-- Src CSS ? -->
+        
+        <!-- Google Font -->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <!-- Shrikhand Font -->
+        <link href="https : //fonts.googleapis.com/css2?family= Raleway & display = swap" rel="stylesheet">
+        <!-- Roboto Font -->
+        <link href="https://fonts.googleapis.com/css2?family=Raleway&family=Roboto&display=swap" rel="stylesheet">
+    </head>
+    <body>
+		<header>
+			<div class="bloc__logo">
+				<div class="bloc__logo--arrow">
+					<a href="./index.html"><i class="fas fa-arrow-left"></i></a>
+				</div>
+				<div class="bloc__logo--logo">
+					<img src="./public/images/logo/ohmyfood.png" alt="ohmyfood"/>
+				</div>
+			</div>
+			<!-- Titre & Heart -->
+			<div class="bloc__title">
+				<img class="bloc__title--img" src="./public/images/restaurants/img4.jpg" alt="Le délice des sens"/>
+				<div class="bloc__title--txt">
+					<h1 class="bloc__title--h1">Le délice des sens</h1><i class="far fa-heart"></i><i class="fas fa-heart fa-heart--hover"></i>
+				</div>
+			</div>
+		</header>
+		<section>
+			<div class="menu">
+                <!-- Entrées -->
+				<h2 class="menu__title">Entrées</h2>
+				<div class="menu__entrees">
+					<div class="menu__bloc">
+						<div class="menu__a">
+							<div class="menu__li">
+								<h3 class="menu__h3">Tartare de thons</h3>
+								<div class="menu__p">
+									<!-- flex -->
+									<p>Assaisonné au yuzu</p>
+									<span>25€</span>
+								</div>
+							</div>
+							<div class="menu__slide">
+								<div class="menu__rotate">
+									<i class="fas fa-check-circle"></i>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="menu__bloc">
+						<div class="menu__a">
+							<div class="menu__li">
+								<h3 class="menu__h3">Bouchée de homard croustillant</h3>
+								<div class="menu__p">
+									<!-- flex -->
+									<p>Et sa farandole de petits légumes</p>
+									<span>35€</span>
+								</div>
+							</div>
+							<div class="menu__slide">
+								<div class="menu__rotate">
+									<i class="fas fa-check-circle"></i>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="menu__bloc">
+						<div class="menu__a">
+							<div class="menu__li">
+								<h3 class="menu__h3">Velouté de cèpes</h3>
+								<div class="menu__p">
+									<!-- flex -->
+									<p>Aux truffes</p>
+									<span>20€</span>
+								</div>
+							</div>
+							<div class="menu__slide">
+								<div class="menu__rotate">
+									<i class="fas fa-check-circle"></i>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<!-- Plats -->
+			<div class="menu">
+				<h2 class="menu__title">Plats</h2>
+				<div class="menu__plats">
+					<div class="menu__bloc">
+						<div class="menu__a">
+							<div class="menu__li">
+								<h3 class="menu__h3">Poulet rôti aux herbes de provence</h3>
+								<div class="menu__p">
+									<!-- flex -->
+									<p>Et sa crème de truffe</p>
+									<span>40€</span>
+								</div>
+							</div>
+							<div class="menu__slide">
+								<div class="menu__rotate">
+									<i class="fas fa-check-circle"></i>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="menu__bloc">
+						<div class="menu__a">
+							<div class="menu__li">
+								<h3 class="menu__h3">Langoustine rôtie</h3>
+								<div class="menu__p">
+									<!-- flex -->
+									<p>Et ses légumes de saison</p>
+									<span>35€</span>
+								</div>
+							</div>
+							<div class="menu__slide">
+								<div class="menu__rotate">
+									<i class="fas fa-check-circle"></i>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="menu__bloc">
+						<div class="menu__a">
+							<div class="menu__li">
+								<h3 class="menu__h3">Côte de boeuf angus</h3>
+								<div class="menu__p">
+									<!-- flex -->
+									<p>Et sa purée de panais</p>
+									<span>44€</span>
+								</div>
+							</div>
+							<div class="menu__slide">
+								<div class="menu__rotate">
+									<i class="fas fa-check-circle"></i>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<!-- Desserts -->
+			<div class="menu">
+				<h2 class="menu__title">Desserts</h2>
+				<div class="menu__desserts">
+					<div class="menu__bloc">
+						<div class="menu__a">
+							<div class="menu__li">
+								<h3 class="menu__h3">Farandole de desserts</h3>
+								<div class="menu__p">
+									<!-- flex -->
+									<p>Du chef</p>
+									<span>18€</span>
+								</div>
+							</div>
+							<div class="menu__slide">
+								<div class="menu__rotate">
+									<i class="fas fa-check-circle"></i>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="menu__bloc">
+						<div class="menu__a">
+							<div class="menu__li">
+								<h3 class="menu__h3">Crème brulée</h3>
+								<div class="menu__p">
+									<!-- flex -->
+									<p>Revisitée</p>
+									<span>22€</span>
+								</div>
+							</div>
+							<div class="menu__slide">
+								<div class="menu__rotate">
+									<i class="fas fa-check-circle"></i>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="menu__bloc">
+						<div class="menu__a">
+							<div class="menu__li">
+								<h3 class="menu__h3">Tiramisu</h3>
+								<div class="menu__p">
+									<!-- flex -->
+									<p>À la noisette</p>
+									<span>23€</span>
+								</div>
+							</div>
+							<div class="menu__slide">
+								<div class="menu__rotate">
+									<i class="fas fa-check-circle"></i>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<!-- Btn commande -->
+			<div class="menu__bloc--command">
+				<button class="menu__command">Commander</button>
+			</div>
+		</section>
+		<!-- Footer -->
+		<footer>
+			<div class="bloc__footer">
+				<span class="bloc__footer--span">ohmyfood</span>
+				<ul>
+					<li class="bloc__footer--li">
+						<i class="fas fa-utensils bloc__footer--fa-utensils"></i>
+						<p>Proposer un restaurants</p>
+					</li>
+					<li class="bloc__footer--li">
+						<i class="fas fa-hands-helping bloc__footer--fa-hands-helping"></i>
+						<p>Devenir partenaire</p>
+					</li>
+					<li class="bloc__footer--li">
+						<p>Mention légale</p>
+					</li>
+					<li class="bloc__footer--li">
+						<a class="bloc__footer--contact" href="ohmyfood@gmail.com">Contact</a>
+					</li>
+				</ul>
+			</div>
+		</footer>
+	</body>
+</html>
