--- a/note_enchantee.html
+++ b/note_enchantee.html
@@ -24,7 +24,7 @@
 					<a href="./index.html"><i class="fas fa-arrow-left"></i></a>
 				</div>
 				<div class="bloc__logo--logo">
-					<img src="./public/images/logo/ohmyfood.png" alt="ohmyfood" />
+					<img src="./public/images/logo/ohmyfood.png" alt="ohmyfood"/>
 				</div>
 			</div>
 			<!-- Titre & Heart -->
@@ -225,7 +225,7 @@
 				</div>
 			</div>
 			<!-- Btn commande -->
-			<div class="menu__block-command">
+			<div class="menu__bloc--command">
 				<button class="menu__command">Commander</button>
 			</div>
 		</section>
