--- a/palette_du_gout.html
+++ b/palette_du_gout.html
@@ -204,7 +204,7 @@
 				</div>
 			</div>
 			<!-- Btn commande -->
-			<div class="menu__block--command">
+			<div class="menu__bloc--command">
 				<button class="menu__command">Commander</button>
 			</div>
 		</section>
