Minor change again

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <meta name="twitter:site" content="@publisher_handle">
         <meta name="twitter:title" content="OhMyFood">
         <meta name="twitter:description" content="Ohmyfood est une entreprise de commande de repas en ligne">
-        <meta name="twitter:creator" content="@p_klsch">                  
+        <meta name="twitter:creator" content="@_k0lsch">             
         <!-- Twitter Summary card images must be at least 200x200px -->         
         <meta name="twitter:image" content="http://www.OhMyFood.com/image.jpg">
     </head>
@@ -44,7 +44,7 @@
                 <h2 class="bloc__header--p">Découvrez des restaurants d'exception, séléctionnés par nos soins.</h2>
                 <button class="bloc__header--btn" type="button" name="button">Explorer nos restaurants</button>
             </div>
-            <!--  -->
+            <!-- Bloc Fonction -->
             <div class="bloc__fonct">
                 <h3 class="bloc__fonct--title">Fonctionnement</h3>
                 <ol>
@@ -54,7 +54,7 @@
                 </ol>
             </div>
         </div>
-        <!--  -->
+        <!-- Card Restaurants -->
         <section>
             <div class="bloc__card">
             <h3 class="bloc__card--title">Restaurants</h3>
