--- a/delice_des_sens.html
+++ b/delice_des_sens.html
@@ -220,7 +220,7 @@
 						<p>Mention légale</p>
 					</li>
 					<li class="bloc__footer--li">
-						<a class="bloc__footer--contact" href="ohmyfood@gmail.com">Contact</a>
+						<a class="bloc__footer--contact" href="mailto:ohmyfood@gmail.com">Contact</a>
 					</li>
 				</ul>
 			</div>
