--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <!-- Shrikhand Font -->
-        <link href="https : //fonts.googleapis.com/css2?family= Raleway & display = swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
         <!-- Roboto Font -->
         <link href="https://fonts.googleapis.com/css2?family=Raleway&family=Roboto&display=swap" rel="stylesheet">
         <!-- Open Graph data --> 
@@ -108,7 +108,7 @@
                                 <h4 class="bloc__card--h4">Le délice des sens</h4>
                                 <p class="bloc__card--city">Folie-Méricourt</p>
                             </div>
-                            <div class="bloc-card__heart"><i class="far fa-heart"></i><i class="fas fa-heart fa-heart--hover"></i></div>
+                            <div class="bloc__card--heart"><i class="far fa-heart"></i><i class="fas fa-heart fa-heart--hover"></i></div>
                         </figcaption>
                     </figure>
                 </a>
@@ -131,7 +131,7 @@
                         <p>Mention légale</p>
                     </li>
                     <li class="bloc__footer--li">
-                        <a href="ohmyfood@gmail.com">Contact</a>
+                        <a href="mailto:ohmyfood@gmail.com">Contact</a>
                     </li>
                 </ul>
             </div>    
