--- a/delice_des_sens.html
+++ b/delice_des_sens.html
@@ -6,16 +6,15 @@
         <meta name="author" content="Pierre KÖLSCH">
         <meta name="description" content="Site de commande de repas en ligne">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        
-            <!-- Src CSS ? -->
-        
+        <script src="https://kit.fontawesome.com/2fdef033d0.js" crossorigin="anonymous"></script>
+		<link rel="stylesheet" href="./src/css/style.css">
         <!-- Google Font -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <!-- Shrikhand Font -->
-        <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
-        <!-- Roboto Font -->
-        <link href="https://fonts.googleapis.com/css2?family=Raleway&family=Roboto&display=swap" rel="stylesheet">
+		<!-- Shrikhand Font -->  
+		<link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
+		<!-- Roboto Font -->
+		<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     </head>
     <body>
 		<header>
@@ -24,64 +23,63 @@
 					<a href="./index.html"><i class="fas fa-arrow-left"></i></a>
 				</div>
 				<div class="bloc__logo--logo">
-					<img src="./public/images/logo/ohmyfood.png" alt="ohmyfood"/>
-				</div>
-			</div>
-			<!-- Titre & Heart -->
-			<div class="bloc__title">
-				<img class="bloc__title--img" src="./public/images/restaurants/img4.jpg" alt="Le délice des sens"/>
-				<div class="bloc__title--txt">
-					<h1 class="bloc__title--h1">Le délice des sens</h1><i class="far fa-heart"></i><i class="fas fa-heart fa-heart--hover"></i>
+					<img src="./src/images/logo/ohmyfood.png" alt="ohmyfood"/>
 				</div>
 			</div>
 		</header>
-		<section>
-			<div class="menu">
+			<!-- Titre & Heart -->
+			<div class="bloc__img">
+				<img class="bloc__img--img" src="./src/images/restaurants/img4.jpg" alt="Le délice des sens"/>
+			</div>
+		<section class="main">
+			<div class="bloc__title">
+				<h1 class="bloc__title--h1">Le délice des sens</h1>
+				<div class="bloc__title--heart">
+					<i class="far fa-heart"></i><i class="fas fa-heart fa-heart--hover"></i>
+				</div>
+			</div>
+			<div class="bloc__main">
+				<div class="menu">
                 <!-- Entrées -->
-				<h2 class="menu__title">Entrées</h2>
-				<div class="menu__entrees">
-					<div class="menu__bloc">
-						<div class="menu__a">
-							<div class="menu__li">
-								<h3 class="menu__h3">Tartare de thons</h3>
-								<div class="menu__p">
+					<h2 class="menu__title">Entrées</h2>
+					<div class="menu__entrees">
+						<div class="menu__bloc">
+							<div class="menu__liste">
+								<h3 class="menu__liste--h3">Tartare de thons</h3>
+								<div class="menu__liste--p">
 									<p>Assaisonné au yuzu</p>
-									<span>25€</span>
 								</div>
 							</div>
 							<div class="menu__slide">
+								<span>25€</span>
 								<div class="menu__rotate">
 									<i class="fas fa-check-circle"></i>
 								</div>
 							</div>
 						</div>
-					</div>
-					<div class="menu__bloc">
-						<div class="menu__a">
-							<div class="menu__li">
-								<h3 class="menu__h3">Bouchée de homard croustillant</h3>
-								<div class="menu__p">
+						<div class="menu__bloc">
+							<div class="menu__liste">
+								<h3 class="menu__liste--h3">Bouchée de homard croustillant</h3>
+								<div class="menu__liste--p">
 									<p>Et sa farandole de petits légumes</p>
-									<span>35€</span>
 								</div>
 							</div>
 							<div class="menu__slide">
+								<span>35€</span>
 								<div class="menu__rotate">
 									<i class="fas fa-check-circle"></i>
 								</div>
 							</div>
 						</div>
-					</div>
-					<div class="menu__bloc">
-						<div class="menu__a">
-							<div class="menu__li">
-								<h3 class="menu__h3">Velouté de cèpes</h3>
-								<div class="menu__p">
+						<div class="menu__bloc">
+							<div class="menu__liste">
+								<h3 class="menu__liste--h3">Velouté de cèpes</h3>
+								<div class="menu__liste--p">
 									<p>Aux truffes</p>
-									<span>20€</span>
 								</div>
 							</div>
 							<div class="menu__slide">
+								<span>20€</span>
 								<div class="menu__rotate">
 									<i class="fas fa-check-circle"></i>
 								</div>
@@ -89,53 +87,47 @@
 						</div>
 					</div>
 				</div>
-			</div>
-			<!-- Plats -->
-			<div class="menu">
-				<h2 class="menu__title">Plats</h2>
-				<div class="menu__plats">
-					<div class="menu__bloc">
-						<div class="menu__a">
-							<div class="menu__li">
-								<h3 class="menu__h3">Poulet rôti aux herbes de provence</h3>
-								<div class="menu__p">
+				<!-- Plats -->
+				<div class="menu">
+					<h2 class="menu__title">Plats</h2>
+					<div class="menu__plats">
+						<div class="menu__bloc">
+							<div class="menu__liste">
+								<h3 class="menu__liste--h3">Poulet rôti aux herbes de provence</h3>
+								<div class="menu__liste--p">
 									<p>Et sa crème de truffe</p>
-									<span>40€</span>
 								</div>
 							</div>
 							<div class="menu__slide">
+								<span>40€</span>
 								<div class="menu__rotate">
 									<i class="fas fa-check-circle"></i>
 								</div>
 							</div>
 						</div>
-					</div>
-					<div class="menu__bloc">
-						<div class="menu__a">
-							<div class="menu__li">
-								<h3 class="menu__h3">Langoustine rôtie</h3>
-								<div class="menu__p">
+						<div class="menu__bloc">
+							<div class="menu__liste">
+								<h3 class="menu__liste--h3">Langoustine rôtie</h3>
+								<div class="menu__liste--p">
 									<p>Et ses légumes de saison</p>
-									<span>35€</span>
 								</div>
 							</div>
 							<div class="menu__slide">
+								<span>35€</span>
 								<div class="menu__rotate">
 									<i class="fas fa-check-circle"></i>
 								</div>
 							</div>
 						</div>
-					</div>
-					<div class="menu__bloc">
-						<div class="menu__a">
-							<div class="menu__li">
-								<h3 class="menu__h3">Côte de boeuf angus</h3>
-								<div class="menu__p">
+						<div class="menu__bloc">
+							<div class="menu__liste">
+								<h3 class="menu__liste--h3">Côte de boeuf angus</h3>
+								<div class="menu__liste--p">
 									<p>Et sa purée de panais</p>
-									<span>44€</span>
 								</div>
 							</div>
 							<div class="menu__slide">
+								<span>44€</span>
 								<div class="menu__rotate">
 									<i class="fas fa-check-circle"></i>
 								</div>
@@ -143,53 +135,47 @@
 						</div>
 					</div>
 				</div>
-			</div>
-			<!-- Desserts -->
-			<div class="menu">
-				<h2 class="menu__title">Desserts</h2>
-				<div class="menu__desserts">
-					<div class="menu__bloc">
-						<div class="menu__a">
-							<div class="menu__li">
-								<h3 class="menu__h3">Farandole de desserts</h3>
-								<div class="menu__p">
+				<!-- Desserts -->
+				<div class="menu">
+					<h2 class="menu__title">Desserts</h2>
+					<div class="menu__desserts">
+						<div class="menu__bloc">
+							<div class="menu__liste">
+								<h3 class="menu__liste--h3">Farandole de desserts</h3>
+								<div class="menu__liste--p">
 									<p>Du chef</p>
-									<span>18€</span>
 								</div>
 							</div>
 							<div class="menu__slide">
+								<span>18€</span>
 								<div class="menu__rotate">
 									<i class="fas fa-check-circle"></i>
 								</div>
 							</div>
 						</div>
-					</div>
-					<div class="menu__bloc">
-						<div class="menu__a">
-							<div class="menu__li">
-								<h3 class="menu__h3">Crème brulée</h3>
-								<div class="menu__p">
+						<div class="menu__bloc">
+							<div class="menu__liste">
+								<h3 class="menu__liste--h3">Crème brulée</h3>
+								<div class="menu__liste--p">
 									<p>Revisitée</p>
-									<span>22€</span>
 								</div>
 							</div>
 							<div class="menu__slide">
+								<span>22€</span>
 								<div class="menu__rotate">
 									<i class="fas fa-check-circle"></i>
 								</div>
 							</div>
 						</div>
-					</div>
-					<div class="menu__bloc">
-						<div class="menu__a">
-							<div class="menu__li">
-								<h3 class="menu__h3">Tiramisu</h3>
-								<div class="menu__p">
+						<div class="menu__bloc">
+							<div class="menu__liste">
+								<h3 class="menu__liste--h3">Tiramisu</h3>
+								<div class="menu__liste--p">
 									<p>À la noisette</p>
-									<span>23€</span>
 								</div>
 							</div>
 							<div class="menu__slide">
+								<span>23€</span>
 								<div class="menu__rotate">
 									<i class="fas fa-check-circle"></i>
 								</div>
@@ -206,21 +192,21 @@
 		<!-- Footer -->
 		<footer>
 			<div class="bloc__footer">
-				<span class="bloc__footer--span">ohmyfood</span>
+				<h2 class="bloc__footer--h2">ohmyfood</h2>
 				<ul>
 					<li class="bloc__footer--li">
 						<i class="fas fa-utensils bloc__footer--fa-utensils"></i>
-						<p>Proposer un restaurants</p>
+						<a href="#">Proposer un restaurants</a>
 					</li>
 					<li class="bloc__footer--li">
 						<i class="fas fa-hands-helping bloc__footer--fa-hands-helping"></i>
-						<p>Devenir partenaire</p>
+						<a href="#">Devenir partenaire</a>
 					</li>
 					<li class="bloc__footer--li">
-						<p>Mention légale</p>
+						<a href="#">Mention légale</a>
 					</li>
 					<li class="bloc__footer--li">
-						<a class="bloc__footer--contact" href="mailto:ohmyfood@gmail.com">Contact</a>
+						<a href="mailto:ohmyfood@gmail.com">Contact</a>
 					</li>
 				</ul>
 			</div>
