--- a/palette_du_gout.html
+++ b/palette_du_gout.html
@@ -6,16 +6,15 @@
         <meta name="author" content="Pierre KÖLSCH">
         <meta name="description" content="Site de commande de repas en ligne">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        
-            <!-- Src CSS ? -->
-        
+        <script src="https://kit.fontawesome.com/2fdef033d0.js" crossorigin="anonymous"></script>
+        <link rel="stylesheet" href="./src/css/style.css">        
         <!-- Google Font -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <!-- Shrikhand Font -->
-        <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
-        <!-- Roboto Font -->
-        <link href="https://fonts.googleapis.com/css2?family=Raleway&family=Roboto&display=swap" rel="stylesheet">
+		<!-- Shrikhand Font -->  
+		<link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
+		<!-- Roboto Font -->
+		<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     </head>
     <body>
         <header>
@@ -24,64 +23,63 @@
 					<a href="./index.html"><i class="fas fa-arrow-left"></i></a>
 				</div>
 				<div class="bloc__logo--logo">
-					<img src="./public/images/logo/ohmyfood.png" alt="ohmyfood"/>
-				</div>
-			</div>
-			<!-- Titre & Heart -->
-			<div class="bloc__title">
-				<img class="bloc__title--img" src="./public/images/restaurants/img1.jpg" alt="La palette du goût"/>
-				<div class="bloc__title--txt">
-					<h1 class="bloc__title--h1">La palette du goût</h1><i class="far fa-heart"></i><i class="fas fa-heart fa-heart--hover"></i>
+					<img src="./src/images/logo/ohmyfood.png" alt="ohmyfood"/>
 				</div>
 			</div>
 		</header>
-		<section>
-            <div class="menu">
+			<!-- Titre & Heart -->
+			<div class="bloc__img">
+				<img class="bloc__img--img" src="./src/images/restaurants/img1.jpg" alt="La palette du goût"/>
+			</div>
+		<section class="main">
+			<div class="bloc__title">
+				<h1 class="bloc__title--h1">La palette du goût</h1>
+				<div class="bloc__title--heart">
+					<i class="far fa-heart"></i><i class="fas fa-heart fa-heart--hover"></i>
+				</div>
+			</div>
+			<div class="bloc__main">
+            	<div class="menu">
                 <!-- Entrées -->
-			    <h2 class="menu__title">Entrées</h2>
-			    <div class="menu__entrees">
-				    <div class="menu__bloc">
-					    <div class="menu__a">
-						    <div class="menu__li">
-							    <h3 class="menu__h3">Fricassée d'escargot</h3>
-							    <div class="menu__p">
+			    	<h2 class="menu__title">Entrées</h2>
+			    	<div class="menu__entrees">
+				    	<div class="menu__bloc">
+						    <div class="menu__liste">
+							    <h3 class="menu__liste--h3">Fricassée d'escargot</h3>
+							    <div class="menu__liste--p">
 								    <p>Au piment d'espelette</p>
-								    <span>25€</span>
 							    </div>
 						    </div>
 						    <div class="menu__slide">
+								<span>25€</span>
 							    <div class="menu__rotate">
 								    <i class="fas fa-check-circle"></i>
 							    </div>
 						    </div>
 					    </div>
-				    </div>
-				    <div class="menu__bloc">
-					    <div class="menu__a">
-						    <div class="menu__li">
-							    <h3 class="menu__h3">Foie gras de canard mi-cuit</h3>
-							    <div class="menu__p">
+				    	<div class="menu__bloc">
+						    <div class="menu__liste">
+							    <h3 class="menu__liste--h3">Foie gras de canard mi-cuit</h3>
+							    <div class="menu__liste--p">
 								    <p>Et ses copeaux de truffe noire</p>
-								    <span>35€</span>
 							    </div>
 						    </div>
 						    <div class="menu__slide">
+								<span>35€</span>
 							    <div class="menu__rotate">
 								    <i class="fas fa-check-circle"></i>
 							    </div>
 						    </div>
 					    </div>
-				    </div>
-				    <div class="menu__bloc">
-					    <div class="menu__a">
-						    <div class="menu__li">
-							    <h3 class="menu__h3">Oeuf au plat</h3>
-							    <div class="menu__p">
+				    	<div class="menu__bloc">
+						    <div class="menu__liste">
+							    <h3 class="menu__liste--h3">Oeuf au plat</h3>
+							    <div class="menu__liste--p">
 								    <p>Assaisonné à la truffe sur lit de caviar</p>
-								    <span>20€</span>
 							    </div>
 						    </div>
 						    <div class="menu__slide">
+								<span>20€</span>
 							    <div class="menu__rotate">
 								    <i class="fas fa-check-circle"></i>
 							    </div>
@@ -89,106 +87,98 @@
 					    </div>
 				    </div>
 			    </div>
-            </div>
-			<!-- Plats -->
-			<h2 class="menu__title">Plats</h2>
-			<div class="menu__plats">
-				<div class="menu__bloc">
-					<div class="menu__a">
-						<div class="menu__li">
-							<h3 class="menu__h3">Filet de boeuf aux herbes</h3>
-							<div class="menu__p">
-								<p>Accompagné de sa ribambelle de légumes</p>
+				<!-- Plats -->
+				<div class="menu">
+					<h2 class="menu__title">Plats</h2>
+					<div class="menu__plats">
+						<div class="menu__bloc">
+							<div class="menu__liste">
+								<h3 class="menu__liste--h3">Filet de boeuf aux herbes</h3>
+								<div class="menu__liste--p">
+									<p>Accompagné de sa ribambelle de légumes</p>
+								</div>
+							</div>
+							<div class="menu__slide">
 								<span>40€</span>
+								<div class="menu__rotate">
+									<i class="fas fa-check-circle"></i>
+								</div>
 							</div>
 						</div>
-						<div class="menu__slide">
-							<div class="menu__rotate">
-								<i class="fas fa-check-circle"></i>
+						<div class="menu__bloc">
+							<div class="menu__liste">
+								<h3 class="menu__liste--h3">Parmentier de queue de boeuf</h3>
+								<div class="menu__liste--p">
+									<p>la truffe noire sur sa purée de panais</p>
+								</div>
 							</div>
-						</div>
-					</div>
-				</div>
-				<div class="menu__bloc">
-					<div class="menu__a">
-						<div class="menu__li">
-							<h3 class="menu__h3">Parmentier de queue de boeuf</h3>
-							<div class="menu__p">
-								<p>la truffe noire sur sa purée de panais</p>
+							<div class="menu__slide">
 								<span>35€</span>
+								<div class="menu__rotate">
+									<i class="fas fa-check-circle"></i>
+								</div>
 							</div>
 						</div>
-						<div class="menu__slide">
-							<div class="menu__rotate">
-								<i class="fas fa-check-circle"></i>
+						<div class="menu__bloc">
+							<div class="menu__liste">
+								<h3 class="menu__liste--h3">Filet de Turbot</h3>
+								<div class="menu__liste--p">
+									<p>Aux agrumes</p>
+								</div>
 							</div>
-						</div>
-					</div>
-				</div>
-				<div class="menu__bloc">
-					<div class="menu__a">
-						<div class="menu__li">
-							<h3 class="menu__h3">Filet de Turbot</h3>
-							<div class="menu__p">
-								<p>Aux agrumes</p>
+							<div class="menu__slide">
 								<span>44€</span>
-							</div>
-						</div>
-						<div class="menu__slide">
-							<div class="menu__rotate">
-								<i class="fas fa-check-circle"></i>
+								<div class="menu__rotate">
+									<i class="fas fa-check-circle"></i>
+								</div>
 							</div>
 						</div>
 					</div>
 				</div>
-			</div>
-			<!-- Desserts -->
-			<h2 class="menu__title">Desserts</h2>
-			<div class="menu__desserts">
-				<div class="menu__bloc">
-					<div class="menu__a">
-						<div class="menu__li">
-							<h3 class="menu__h3">Paris-Brest</h3>
-							<div class="menu__p">
-								<p class="menu__overflow">Revisité</p>
+				<!-- Desserts -->
+				<div class="menu">
+					<h2 class="menu__title">Desserts</h2>
+					<div class="menu__desserts">
+						<div class="menu__bloc">
+							<div class="menu__liste">
+								<h3 class="menu__liste--h3">Paris-Brest</h3>
+								<div class="menu__liste--p">
+									<p>Revisité</p>
+								</div>
+							</div>
+							<div class="menu__slide">
 								<span>18€</span>
+								<div class="menu__rotate">
+									<i class="fas fa-check-circle"></i>
+								</div>
 							</div>
 						</div>
-						<div class="menu__slide">
-							<div class="menu__rotate">
-								<i class="fas fa-check-circle"></i>
+						<div class="menu__bloc">
+							<div class="menu__liste">
+								<h3 class="menu__liste--h3">Macaron au chocolat d'exception</h3>
+								<div class="menu__liste--p">
+									<p>Et glace à la vanille de Madagascar</p>
+								</div>
 							</div>
-						</div>
-					</div>
-				</div>
-				<div class="menu__bloc">
-					<div class="menu__a">
-						<div class="menu__li">
-							<h3 class="menu__h3">Macaron au chocolat d'exception</h3>
-							<div class="menu__p">
-								<p>Et glace à la vanille de Madagascar</p>
+							<div class="menu__slide">
 								<span>22€</span>
+								<div class="menu__rotate">
+									<i class="fas fa-check-circle"></i>
+								</div>
 							</div>
 						</div>
-						<div class="menu__slide">
-							<div class="menu__rotate">
-								<i class="fas fa-check-circle"></i>
+						<div class="menu__bloc">
+							<div class="menu__liste">
+								<h3 class="menu__liste--h3">Mousse au chocolat</h3>
+								<div class="menu__liste--p">
+									<p>Au piment d'espelette et à la truffe noire</p>
+								</div>
 							</div>
-						</div>
-					</div>
-				</div>
-				<div class="menu__bloc">
-					<div class="menu__a">
-						<div class="menu__li">
-							<h3 class="menu__h3">Mousse au chocolat</h3>
-							<div class="menu__p">
-								<p>Au piment d'espelette et à la truffe noire</p>
+							<div class="menu__slide">
 								<span>23€</span>
-							</div>
-						</div>
-						<div class="menu__slide">
-							<div class="menu__rotate">
-								<i class="fas fa-check-circle"></i>
+								<div class="menu__rotate">
+									<i class="fas fa-check-circle"></i>
+								</div>
 							</div>
 						</div>
 					</div>
@@ -202,21 +192,21 @@
 		<!-- Footer -->
 		<footer>
 			<div class="bloc__footer">
-				<span class="bloc__footer--span">ohmyfood</span>
+				<h2 class="bloc__footer--h2">ohmyfood</h2>
 				<ul>
 					<li class="bloc__footer--li">
 						<i class="fas fa-utensils bloc__footer--fa-utensils"></i>
-						<p>Proposer un restaurants</p>
+						<a href="#">Proposer un restaurants</a>
 					</li>
 					<li class="bloc__footer--li">
 						<i class="fas fa-hands-helping bloc__footer--fa-hands-helping"></i>
-						<p>Devenir partenaire</p>
+						<a href="#">Devenir partenaire</a>
 					</li>
 					<li class="bloc__footer--li">
-						<p>Mention légale</p>
+						<a href="#">Mention légale</a>
 					</li>
 					<li class="bloc__footer--li">
-						<a class="bloc__footer--contact" href="mailto:ohmyfood@gmail.com">Contact</a>
+						<a href="mailto:ohmyfood@gmail.com">Contact</a>
 					</li>
 				</ul>
 			</div>
