Changements effectués après les remarques en soutenance sur le responsive + insert input

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <div class="bloc__header">
                 <img class="bloc__header--img" alt="ohmyfood" src="./src/images/logo/ohmyfood.png"/>
                 <div class="bloc__header--geo">
-                    <i class="fas fa-map-marker-alt"></i> <span>Paris, Belleville</span>
+                    <i class="fas fa-map-marker-alt"></i> <input class="bloc__header--input" type="text" placeholder="Paris, Belleville" />
                 </div>
             </div>
         </header>
